// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/TooltipBase/DescriptionText should renders correctly 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 42,
        "lineHeight": 54,
      },
      [
        {
          "paddingBottom": 24,
          "zIndex": 1,
        },
        undefined,
      ],
    ]
  }
>
  descriptionText
</Text>
`;

exports[`@npm/mobydick-core/TooltipBase/DescriptionText should renders correctly font 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#20242D",
        "fontFamily": "Inter-Regular",
        "fontSize": 42,
        "lineHeight": 54,
      },
      [
        {
          "paddingBottom": 24,
          "zIndex": 1,
        },
        {
          "width": 200,
        },
      ],
    ]
  }
>
  descriptionText
</Text>
`;
